launchpad-buildd (226) UNRELEASED; urgency=medium

  * Remove unused "distribution" argument from the binarypackage manager.
    This was only used with the old internal sbuild fork, which we dropped
    in launchpad-buildd 127.
  * Remove the old "distroseries_name" argument from the sourcepackagerecipe
    manager, which duplicated the common "series" argument.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 04 Jan 2023 12:58:36 +0000

launchpad-buildd (225) focal; urgency=medium

  * Fix add-trusted-keys regression due to Backend.open calling "lxc exec"
    and draining stdin (LP: #1999420).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 13 Dec 2022 12:16:46 +0000

launchpad-buildd (224) focal; urgency=medium

  [ Colin Watson ]
  * Allow configuring builders to use a different ClamAV database URL.
  * Require the LXD snap to be installed, rather than depending on the lxd
    package (which no longer exists in jammy).
  * Calculate major number for device-mapper by searching /proc/devices; the
    "dmsetup create" approach doesn't seem to work properly in jammy.

  [ Andrey Fedoseev ]
  * `open` method is added to the backends providing access to the files
    in target environments via a file-like object.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 12 Dec 2022 12:20:03 +0000

launchpad-buildd (223) focal; urgency=medium

  * Add optional malware scanning at the end of CI build jobs, currently
    implemented using clamav.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 07 Oct 2022 17:31:08 +0100

launchpad-buildd (222) focal; urgency=medium

  * Remove use of six.
  * Fix handling of librarian macaroons, where the username is empty and we
    must use prior authentication.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 20 Sep 2022 14:39:14 +0100

launchpad-buildd (221) focal; urgency=medium

  [ Andy Whitcroft ]
  * Include Build-Depends-Arch when considering direct dependancies
    (LP: #1988999)
