@@ -43,6 +43,30 @@ def get_device_mapper_major():
                 "Cannot determine major device number for device-mapper")
 
 
+def get_nvidia_container_paths():
+    """Return the paths that need to be bind-mounted for NVIDIA CUDA support.
+
+    LXD's security.privileged=true and nvidia.runtime=true options are
+    unfortunately incompatible, but we can emulate the important bits of the
+    latter with some tactical bind-mounts.  There is no very good way to do
+    this; this seems like the least unpleasant approach.
+    """
+    env = dict(os.environ)
+    env["LD_LIBRARY_PATH"] = "/snap/lxd/current/lib"
+    return subprocess.check_output(
+        [
+            "/snap/lxd/current/bin/nvidia-container-cli.real",
+            "list",
+            "--binaries",
+            "--firmwares",
+            "--ipcs",
+            "--libraries",
+        ],
+        env=env,
+        universal_newlines=True,
+    ).splitlines()
+
+
 fallback_hosts = dedent("""\
     127.0.0.1\tlocalhost
     ::1\tlocalhost ip6-localhost ip6-loopback
@@ -353,6 +377,14 @@ class LXD(Backend):
                 "pool": "default",
                 "type": "disk",
                 }
+        if "gpu-nvidia" in self.constraints:
+            devices["gpu"] = {"type": "gpu"}
+            for i, path in enumerate(get_nvidia_container_paths()):
+                devices[f"nvidia-{i}"] = {
+                    "path": path,
+                    "source": path,
+                    "type": "disk",
+                    }
         self.client.profiles.create(self.profile_name, config, devices)
 
     def start(self):
@@ -458,6 +490,11 @@ class LXD(Backend):
             self.run(
                 ["mknod", "-m", "0660", "/dev/dm-%d" % minor,
                  "b", str(major), str(minor)])
+
+        if "gpu-nvidia" in self.constraints:
+            # We bind-mounted several libraries into the container, so run
+            # ldconfig to update the dynamic linker's cache.
+            self.run(["/sbin/ldconfig"])
 
         # XXX cjwatson 2017-09-07: With LXD < 2.2 we can't create the
         # directory until the container has started.  We can get away with
