@@ -5,6 +5,8 @@ launchpad-buildd (226) UNRELEASED; urgency=medium
     in launchpad-buildd 127.
   * Remove the old "distroseries_name" argument from the sourcepackagerecipe
     manager, which duplicated the common "series" argument.
+  * If the "gpu-nvidia" constraint is specified, then pass through an NVIDIA
+    GPU to the LXD container.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Wed, 04 Jan 2023 12:58:36 +0000
 
